--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
   },
   "dependencies": {
     "@prisma/client": "^6.5.0",
-    "next": "15.2.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "next": "15.2.8",
+    "react": "^19.0.1",
+    "react-dom": "^19.0.1"
   },
   "devDependencies": {
     "@types/node": "^22.13.9",
@@ -25,7 +25,7 @@
     "@types/react-dom": "^19.0.4",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.20.1",
-    "eslint-config-next": "15.2.0",
+    "eslint-config-next": "^15.2.6",
     "postcss": "^8.5.3",
     "prisma": "^6.5.0",
     "tailwindcss": "^3.4.17",
